--- a/platform/index.html
+++ b/platform/index.html
@@ -6,21 +6,21 @@
     <title>Squad In Touch</title>
     <link rel="stylesheet" href="../dist/style.css" type="text/css"/>
     <link rel="shortcut icon" type="image/ico" href="../src/icon/favicon.ico"/>
-    <!--<script>-->
-        <!--(function (i, s, o, g, r, a, m) {-->
-            <!--i['GoogleAnalyticsObject'] = r;-->
-            <!--i[r] = i[r] || function () {-->
-                <!--(i[r].q = i[r].q || []).push(arguments)-->
-            <!--}, i[r].l = 1 * new Date();-->
-            <!--a = s.createElement(o),-->
-                <!--m = s.getElementsByTagName(o)[0];-->
-            <!--a.async = 1;-->
-            <!--a.src = g;-->
-            <!--m.parentNode.insertBefore(a, m)-->
-        <!--})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');-->
-        <!--ga('create', 'UA-77360065-1', 'auto');-->
-        <!--ga('send', 'pageview');-->
-    <!--</script>-->
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-77360065-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 
 </head>
 
@@ -345,9 +345,9 @@
                 <div class="slide-button-testimonials visible-xs">
                     <div class="container slide-button-container">
 
-                            <a class="carousel-control slide-control" href="#how_it_helps_carousel" data-slide="next">
-                                <span class="glyphicon slide-content"></span>
-                            </a>
+                        <a class="carousel-control slide-control" href="#how_it_helps_carousel" data-slide="next">
+                            <span class="glyphicon slide-content"></span>
+                        </a>
 
                     </div>
                 </div>
@@ -476,7 +476,8 @@
             <div class="col-md-6 col-md-offset-1">
                 <div class="how_it_works_right">
                     <div id="tab-1" class="vertical_tab-content current">
-                        <a href="#accordion1" data-toggle="collapse" data-parent="#accordion" class="visible-xs visible-sm">Schools
+                        <a href="#accordion1" data-toggle="collapse" data-parent="#accordion"
+                           class="visible-xs visible-sm">Schools
                             and PE teachers web app</a>
                         <div id="accordion1" class="text">
                             <h6 class="hidden-xs hidden-sm">Schools and PE teachers web app</h6>
@@ -491,12 +492,13 @@
                                 notifications <br>
                                 • Keep your school sports news up to date
                             </p>
-                        <a class="img-wrapper show_img_popup" content="../src/image/HW_01_Schools_web.png">
-                            <img src="../src/image/HW_01_Schools_web_Small.png"/>
-                        </a></div>
+                            <a class="img-wrapper show_img_popup" content="../src/image/HW_01_Schools_web.png">
+                                <img src="../src/image/HW_01_Schools_web_Small.png"/>
+                            </a></div>
                     </div>
                     <div id="tab-2" class="vertical_tab-content">
-                        <a href="#accordion2" data-toggle="collapse" data-parent="#accordion" class="visible-xs visible-sm">Schools
+                        <a href="#accordion2" data-toggle="collapse" data-parent="#accordion"
+                           class="visible-xs visible-sm">Schools
                             public website and big screen</a>
                         <div id="accordion2" class="text">
                             <h6 class="hidden-xs hidden-sm">Schools public website and big screen</h6>
@@ -509,12 +511,13 @@
                                 automatically
                             </p>
 
-                        <a class="show_img_popup" content="../src/image/HW_02_Schools_public%20web-New%20Final.png">
-                            <img src="../src/image/HW_02_Schools_public%20web-New-Small%20Final.png">
-                        </a></div>
+                            <a class="show_img_popup" content="../src/image/HW_02_Schools_public%20web-New%20Final.png">
+                                <img src="../src/image/HW_02_Schools_public%20web-New-Small%20Final.png">
+                            </a></div>
                     </div>
                     <div id="tab-3" class="vertical_tab-content">
-                        <a href="#accordion3" data-toggle="collapse" data-parent="#accordion" class="visible-xs visible-sm">Schools
+                        <a href="#accordion3" data-toggle="collapse" data-parent="#accordion"
+                           class="visible-xs visible-sm">Schools
                             PE staff mobile app</a>
                         <div id="accordion3" class="text">
                             <h6 class="hidden-xs hidden-sm">Schools PE staff mobile app</h6>
@@ -527,13 +530,14 @@
                                 • Send notifications to parents and students about last minutes changes
                             </p>
 
-                        <a class="show_img_popup" content="../src/image/HW_03_Schools_mobile_large.png">
-                            <img class="full-width" src="../src/image/HW_03_Schools_mobile.png"/>
-                        </a>
+                            <a class="show_img_popup" content="../src/image/HW_03_Schools_mobile_large.png">
+                                <img class="full-width" src="../src/image/HW_03_Schools_mobile.png"/>
+                            </a>
                         </div>
                     </div>
                     <div id="tab-4" class="vertical_tab-content">
-                        <a href="#accordion4" data-toggle="collapse" data-parent="#accordion" class="visible-xs visible-sm">Parents
+                        <a href="#accordion4" data-toggle="collapse" data-parent="#accordion"
+                           class="visible-xs visible-sm">Parents
                             and students mobile app</a>
                         <div id="accordion4" class="text">
                             <h6 class="hidden-xs hidden-sm">Parents and students mobile app</h6>
@@ -546,13 +550,14 @@
                                 • Communicate with school PE staff as well as other parents and students
                             </p>
 
-                        <a class="show_img_popup" content="../src/image/HW_04_Parents_mobile.png">
-                            <img src="../src/image/HW_04_Parents_mobile_Small.png"/>
-                        </a>
+                            <a class="show_img_popup" content="../src/image/HW_04_Parents_mobile.png">
+                                <img src="../src/image/HW_04_Parents_mobile_Small.png"/>
+                            </a>
                         </div>
                     </div>
                     <div id="tab-5" class="vertical_tab-content">
-                        <a href="#accordion5" data-toggle="collapse" data-parent="#accordion" class="visible-xs visible-sm">Tournaments
+                        <a href="#accordion5" data-toggle="collapse" data-parent="#accordion"
+                           class="visible-xs visible-sm">Tournaments
                             and events website</a>
                         <div id="accordion5" class="text">
                             <h6 class="hidden-xs hidden-sm">Tournaments and events website</h6>
@@ -564,13 +569,14 @@
                                 • Printable and email-adjusted PDFs with overall tournament results
                             </p>
 
-                        <a class="show_img_popup" content="../src/image/HW_05_Tournaments.png">
-                            <img src="../src/image/HW_05_Tournaments_Small.png"/>
-                        </a>
+                            <a class="show_img_popup" content="../src/image/HW_05_Tournaments.png">
+                                <img src="../src/image/HW_05_Tournaments_Small.png"/>
+                            </a>
                         </div>
                     </div>
                     <div id="tab-6" class="vertical_tab-content vertical_tab-content-bottom">
-                        <a href="#accordion6" data-toggle="collapse" data-parent="#accordion" class="visible-xs visible-sm">Schools
+                        <a href="#accordion6" data-toggle="collapse" data-parent="#accordion"
+                           class="visible-xs visible-sm">Schools
                             sports partnerships website</a>
                         <div id="accordion6" class="text">
                             <h6 class="hidden-xs hidden-sm">Schools sports partnerships website</h6>
@@ -582,9 +588,9 @@
                                 • Dedicated website for each event hosted on Squad In Touch servers for free
                             </p>
 
-                        <a class="show_img_popup" content="../src/image/HW_06_Union.png">
-                            <img src="../src/image/HW_06_Union_Small.png"/>
-                        </a>
+                            <a class="show_img_popup" content="../src/image/HW_06_Union.png">
+                                <img src="../src/image/HW_06_Union_Small.png"/>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -605,57 +611,62 @@
         <div class="carousel-inner">
             <!-- Слайды создаются с помощью контейнера с классом item, внутри которого помещается содержимое слайда -->
             <div class="active item">
-    <div class="container testimonial">
-        <div class="row">
-            <div class="col-md-4 col-sm-4">
-                <div class="testimonial_logo">
-                    <img src="../src/image/isa-logo.png" alt="isa">
+                <div class="container testimonial">
+                    <div class="row">
+                        <div class="col-md-2 col-sm-4">
+                            <div class="testimonial_logo">
+                                <img src="../src/image/isa-logo.png" alt="isa">
+                            </div>
+                        </div>
+                        <div class="col-md-7 col-sm-7">
+                            <div class="testimonial_content">
+                                <h4 class="testimonial_title">
+                                    Independent Schools Association
+                                </h4>
+                                <p>
+                                    "Squad in Touch are a pleasure to work with. They are always willing to try and
+                                    adapt their
+                                    system to meet the users needs and make it as user friendly as possible.
+                                    The team are quick and responsive and very knowledgeable in their field.
+                                    Their results base is very aesthetically pleasing and makes searching for results
+                                    quick and
+                                    easy."<br>
+                                    <br>
+                                    — Richard Stedeford, Laura Blatherwick, ISA National Sports Coordinators
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-7 col-sm-7">
-                <div class="testimonial_content">
-                    <h4 class="testimonial_title">
-                        Independent Schools Association
-                    </h4>
-                    <p>
-                        "Squad in Touch are a pleasure to work with. They are always willing to try and adapt their
-                        system to meet the users needs and make it as user friendly as possible.
-                        The team are quick and responsive and very knowledgeable in their field.
-                        Their results base is very aesthetically pleasing and makes searching for results quick and
-                        easy."<br>
-                        <br>
-                        — Richard Stedeford, Laura Blatherwick, ISA National Sports Coordinators
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
             </div>
 
             <div class="item">
-    <div class="container testimonial">
-        <div class="row">
-            <div class="col-md-4 col-sm-4">
-                <div class="testimonial_logo">
-                    <img src="../src/image/melbourne_junior_school.jpg" alt="Sir John Talbot's school">
+                <div class="container testimonial">
+                    <div class="row">
+                        <div class="col-md-4 col-sm-4">
+                            <div class="testimonial_logo">
+                                <img src="../src/image/melbourne_junior_school.jpg" alt="Sir John Talbot's school">
+                            </div>
+                        </div>
+                        <div class="col-md-7 col-sm-7">
+                            <div class="testimonial_content">
+                                <h4 class="testimonial_title">
+                                    Melbourne Junior School
+                                </h4>
+                                <p>"We are delighted with Squad In Touch at Melbourne Junior School. They could not have
+                                    been more
+                                    helpful in explaining how it works and accommodating our specific school's
+                                    requirements in the
+                                    set-up process. <span><a href="#melbourne-school"
+                                                             data-toggle="modal"> Read more...</a></span>"
+                                    <br>
+                                    <br>
+                                    — Jim Jenkinson, PE & School Sport Coordinator, Melbourne Junior School
+                                </p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-7 col-sm-7">
-                <div class="testimonial_content">
-                    <h4 class="testimonial_title">
-                        Melbourne Junior School
-                    </h4>
-                    <p>"We are delighted with Squad In Touch at Melbourne Junior School. They could not have been more
-                        helpful in explaining how it works and accommodating our specific school's requirements in the
-                        set-up process. <span><a href="#melbourne-school" data-toggle="modal"> Read more...</a></span>"
-                        <br>
-                        <br>
-                        — Jim Jenkinson, PE & School Sport Coordinator, Melbourne Junior School
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
             </div>
             <div class="item">
                 <div class="container testimonial">
@@ -670,7 +681,8 @@
                                 <h4 class="testimonial_title">
                                     John Talbot's School
                                 </h4>
-                                <p>"Squad in Touch provides everything we need to organise school teams and clubs easily.
+                                <p>"Squad in Touch provides everything we need to organise school teams and clubs
+                                    easily.
                                     Anything that is not a feature can be sorted out effectively and the support we have
                                     been given setting this up has been great. This really is one of the best platforms
                                     out there to promote school sport and the time saving potential alone is worth the
@@ -752,17 +764,17 @@
     <a class="right carousel-control" href="#carousel-testimonials" data-slide="next">
         <!--<div class="testimonial-bottom-background">-->
         <div class="testimonials-button-background"></div>
-    <!--</div>-->
-    <!--<div class="slide-button-testimonials">-->
-        <!--<div class="container slide-button-container">-->
-            <!--<div class="slide-control-height">-->
-                <!--<a class="carousel-control slide-control sportsmens-slide" href="#carousel-testimonials"-->
-                   <!--data-slide="next">-->
-                    <!--<span class="glyphicon slide-content"></span>-->
-                <!--</a>-->
-            <!--</div>-->
         <!--</div>-->
-    <!--</div>-->
+        <!--<div class="slide-button-testimonials">-->
+        <!--<div class="container slide-button-container">-->
+        <!--<div class="slide-control-height">-->
+        <!--<a class="carousel-control slide-control sportsmens-slide" href="#carousel-testimonials"-->
+        <!--data-slide="next">-->
+        <!--<span class="glyphicon slide-content"></span>-->
+        <!--</a>-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--</div>-->
     </a>
 </section>
 <!---testimonials-mobile--->
@@ -860,7 +872,8 @@
                             <h4>The Priory School </h4></div>
                         <div class="testimonials-subj">“We have been using Squad in Touch now since September 2017. The
                             biggest benefit to all the staff within the department is that it simply saves time whilst
-                            improving parental contact. Fixtures can quickly be entered onto the calendar and team sheets
+                            improving parental contact. Fixtures can quickly be entered onto the calendar and team
+                            sheets
                             very quickly made. This can include sending confirmation to parents/carers regarding the
                             fixture and details. I strongly believe that Squad in Touch will benefit all schools who use
                             it and I have found that they are very open and accommodating to suggestions for further
