--- a/sport/index.html
+++ b/sport/index.html
@@ -354,7 +354,7 @@
                             <!-- Слайды создаются с помощью контейнера с классом item, внутри которого помещается содержимое слайда -->
 
                             <div class="item active sportsmens-carousel">
-                                <div class="col-md-6 sportsmens-width">
+                                <div class="col-md-3">
                                     <div class="spotsmens_info">
                                         <div class="spotsmens_photo">
                                             <img class="photo_size" src="../src/image/toby.jpg"
@@ -402,7 +402,7 @@
                                 </div>
                             </div>
                             <div class="item sportsmens-carousel">
-                                <div class="col-md-6 sportsmens-width">
+                                <div class="col-md-3">
                                     <div class="spotsmens_info">
                                         <div class="spotsmens_photo">
                                             <img class="photo_size" src="../src/image/jo.jpg" alt="reily"/>
@@ -457,7 +457,7 @@
                                 </div>
                             </div>
                             <div class="item sportsmens-carousel">
-                                <div class="col-md-6 sportsmens-width">
+                                <div class="col-md-3">
                                     <div class="spotsmens_info">
                                         <div class="spotsmens_photo">
                                             <img class="photo_size" src="../src/image/martyn.jpg"
@@ -507,6 +507,114 @@
                                         </div>
 
                                     </div>
+                                </div>
+                            </div>
+
+                            <div class="item sportsmens-carousel">
+                                <div class="col-md-3">
+                                    <div class="spotsmens_info">
+                                        <div class="spotsmens_photo">
+                                            <img class="photo_size" src="../src/image/martyn.jpg"
+                                                 alt="reily"/>
+                                        </div>
+                                        <div class="sportsmens_bio">
+                                            <div class="sportsmens_title">
+                                                <h6 class="sportsmen_subheader"><span
+                                                        class="fontbold">Martyn Bernard</span>
+                                                    <br>One of the most successful British
+                                                    High Jumpers ever</br></h6>
+                                            </div>
+                                            <div class="sportsmens_biography">
+                                                Martyn is an Olympic finalist as well as a Commonwealth games medallist
+                                                with a personal best of 2.3m.
+                                                Martyn is the perfect example of having a ‘plan B’ away from the
+                                                athletics track.
+                                                He…
+                                                <span><a href="#martynmodal" data-toggle="modal"> Read more</a></span>
+                                            </div>
+
+
+                                        </div>
+
+                                    </div>
+                                    <div class="spotsmens_info">
+                                        <div class="spotsmens_photo">
+                                            <img class="photo_size" src="../src/image/michaela.jpg"
+                                                 alt="reily"/>
+                                        </div>
+                                        <div class="sportsmens_bio">
+                                            <div class="sportsmens_title">
+                                                <h6 class="sportsmen_subheader"><span
+                                                        class="fontbold">Michaela Breeze</span>
+                                                    <br>Double Commonwealth Games Champion</br></h6>
+                                            </div>
+                                            <div class="sportsmens_biography">Having won medals in
+                                                weightlifting
+                                                from a very young age,
+                                                Michaela went on to become a Double Commonwealth Games
+                                                Champion
+                                                and was awarded the MBE in the
+                                                2011 Honours list.
+                                            </div>
+
+
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="item sportsmens-carousel">
+                                <div class="col-md-3">
+                                    <div class="spotsmens_info">
+                                        <div class="spotsmens_photo">
+                                            <img class="photo_size" src="../src/image/martyn.jpg"
+                                                 alt="reily"/>
+                                        </div>
+                                        <div class="sportsmens_bio">
+                                            <div class="sportsmens_title">
+                                                <h6 class="sportsmen_subheader"><span
+                                                        class="fontbold">Martyn Bernard</span>
+                                                    <br>One of the most successful British
+                                                    High Jumpers ever</br></h6>
+                                            </div>
+                                            <div class="sportsmens_biography">
+                                                Martyn is an Olympic finalist as well as a Commonwealth games medallist
+                                                with a personal best of 2.3m.
+                                                Martyn is the perfect example of having a ‘plan B’ away from the
+                                                athletics track.
+                                                He…
+                                                <span><a href="#martynmodal" data-toggle="modal"> Read more</a></span>
+                                            </div>
+
+
+                                        </div>
+
+                                    </div>
+                                    <!--<div class="spotsmens_info">-->
+                                        <!--<div class="spotsmens_photo">-->
+                                            <!--<img class="photo_size" src="../src/image/michaela.jpg"-->
+                                                 <!--alt="reily"/>-->
+                                        <!--</div>-->
+                                        <!--<div class="sportsmens_bio">-->
+                                            <!--<div class="sportsmens_title">-->
+                                                <!--<h6 class="sportsmen_subheader"><span-->
+                                                        <!--class="fontbold">Michaela Breeze</span>-->
+                                                    <!--<br>Double Commonwealth Games Champion</br></h6>-->
+                                            <!--</div>-->
+                                            <!--<div class="sportsmens_biography">Having won medals in-->
+                                                <!--weightlifting-->
+                                                <!--from a very young age,-->
+                                                <!--Michaela went on to become a Double Commonwealth Games-->
+                                                <!--Champion-->
+                                                <!--and was awarded the MBE in the-->
+                                                <!--2011 Honours list.-->
+                                            <!--</div>-->
+
+
+                                        <!--</div>-->
+
+                                    <!--</div>-->
                                 </div>
                             </div>
 
