--- a/counter/index.html
+++ b/counter/index.html
@@ -10,7 +10,8 @@
 
 
 
-<div id="counter" class="counter" data-value="19021"></div>
+<div id="eventsCounter" class="counter numCounter" data-value="19,021"></div>
+<div id="schoolsCounter" class="counter numCounter" data-value="325"></div>
 
 
 
