Detect scrolling for counter

--- a/counter/index.html
+++ b/counter/index.html
@@ -8,13 +8,14 @@
 <body>
 
 
+<div class="testtt"></div>
 
+<div class="count-section" id="count-start">
+    <div id="eventsCounter" class="counter numCounter" data-value="19,021"></div>
+    <div id="schoolsCounter" class="counter numCounter" data-value="325"></div>
+</div>
 
-<div id="eventsCounter" class="counter numCounter" data-value="19,021"></div>
-<div id="schoolsCounter" class="counter numCounter" data-value="325"></div>
-
-
-
+<div class="testtt"></div>
 <script src="../dist/app.js" type="text/javascript"></script>
 </body>
 </html>
