--- a/counter/index.html
+++ b/counter/index.html
@@ -11,7 +11,7 @@
 <div class="testtt"></div>
 
 <div class="count-section" id="count-start">
-    <div id="eventsCounter" class="counter numCounter" data-value="19,021"></div>
+    <div id="eventsCounter" class="counter numCounter" data-value="19021456"></div>
     <div id="schoolsCounter" class="counter numCounter" data-value="325"></div>
 </div>
 
